2005-09-16  Martin Baulig  <martin@ximian.com>

	Added generics support to Cecil.

	* Mono.Cecil/IGenericInstType.cs: New file.
	* Mono.Cecil/ITypeParameterType.cs: New file.
	* Mono.Cecil/IMethodTypeParameterType.cs: New file.

	* Mono.Cecil.Metadata/ElementType.cs
	(ElementType): Added `Var', `MVar' and `GenericInst'.

	* Mono.Cecil.Metadata/Utilities.cs
	(Utilities.GetMetadataToken): .NET 2.0 also uses TypeDef's in the
	MemberRefParent.

	* Mono.Cecil/GenericInstType.cs: New file.
	* Mono.Cecil/MethodTypeParameterType.cs: New file.
	* Mono.Cecil/TypeParameterType.cs: New file.

	* Mono.Cecil.Signatures/Var.cs: New file.
	* Mono.Cecil.Signatures/MVar.cs: New file.
	* Mono.Cecil.Signatures/GenericInst.cs: New file.
	* Mono.Cecil.Signatures/GenericInstSignature.cs: New file.

	* Mono.Cecil/ReflectionReader.cs
	(ReflectionReader.GetTypeRefFromSig): Add the new types.

	* Mono.Cecil.Signatures/SignatureReader.cs
	(SignatureReader.ReadType): Add the new types.

2005-10-06  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Fix a bug in type importing.

2005-10-06  Jb Evain  <jbevain@gmail.com>

	* Hopefully, this is the last API change before the release of Cecil 0.1.
	  Mono.Cecil.Implem has been moved to Mono.Cecil. The interfaces where
	  very convenient for a reading API, it was far less convenient for a 
	  modification and writing one. The modification API still needs some work,
	  but this should be easier this way.

2005-09-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataReader.cs:
		Fix resources reading.

	* Mono.Cecil.Implem/StructureWriter.cs:
		Correctly set the offset of resources in the manifest.
	* Mono.Cecil.Implem/StructureFactories.cs:
		Use correct overrides when creating assembly references.
	* Mono.Cecil.Implem/ReflectionFactories:
		Correctly create type references.

2005-09-06  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IReflectionFactories.cs